k8s/infra/infra-stack/postgres02.deploy.yaml
# Deployment for the PostgreSQL instance
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres02
  labels:
    app: postgres02
spec:
  replicas: 1 # Number of pod replicas
  selector:
    matchLabels:
      app: postgres02
  template:
    metadata:
      labels:
        app: postgres02
    spec:
      containers:
        - name: postgres02
          image: postgres:17.0-alpine3.20 # PostgreSQL container image
          ports:
            - containerPort: 5432 # Container port to expose
          volumeMounts:
            - name: postgres02-volume
              mountPath: /var/lib/postgresql/data # Path in the container where data will be stored
          resources:
            requests:
              cpu: "1" # Requested CPU for the container
              memory: "1Gi" # Requested memory for the container
            limits:
              cpu: "1" # Limit of CPU for the container
              memory: "1Gi" # Limit of memory for the container
          # securityContext:
          #   runAsUser: 70 # The defaul 'postgres' user UID
          #   runAsGroup: 70 # The defaul 'postgres' user GID
      volumes:
        - name: postgres02-volume
          persistentVolumeClaim:
            claimName: postgres02-pvc # Claim the PVC for the deployment
      restartPolicy: Always
