k8s/infra/infra-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # HTTP support
    nginx.ingress.kubernetes.io/grpc-backend: "true" # gRPC support
spec:
  ingressClassName: nginx
  rules:
    - host: auth-service.banking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
    - host: auth-grpc-service.banking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8090
    - host: manage-service.banking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manage-service
                port:
                  number: 8080
    - host: manage-grpc-service.banking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manage-service
                port:
                  number: 8090
    - host: transaction-service.banking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 8080
    - host: transaction-grpc-service.banking.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 8090
